--- a/Issuing-Orders/package.json
+++ b/Issuing-Orders/package.json
@@ -15,14 +15,13 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
-    "pg": "^8.7.1",
-    "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
     "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
+    "eslint": "^7.30.0",
+    "eslint-plugin-react": "^7.24.0",
     "nodemon": "^2.0.12"
   }
 }
