--- a/issuing-orders-web/package.json
+++ b/issuing-orders-web/package.json
@@ -13,16 +13,17 @@
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "cra-template": "1.1.2",
     "node-sass": "^6.0.1",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "sass": "^1.37.5",
     "typescript": "^4.3.5",
-    "web-vitals": "^1.1.2",
-    "cra-template": "1.1.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
